scripts/nullaway/annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8.txt
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/tests/math/SinCosTest.java:44: error: [NullAway] @NonNull static field tables not initialized
  private static SinCosTable[] tables;
                               ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/framework/TestbedModel.java:54: error: [NullAway] initializer method does not guarantee @NonNull fields draw (line 43), test (line 44) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public TestbedModel() {
         ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/framework/TestbedModel.java:191: error: [NullAway] initializer method does not guarantee @NonNull field test (line 189) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ListItem(String argCategory) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/framework/TestbedSettings.java:122: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return settingsMap.get(argName);
    ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/RevoluteTest.java:50: error: [NullAway] @NonNull field m_joint not initialized
  private RevoluteJoint m_joint;
                        ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/Car.java:57: error: [NullAway] @NonNull field m_spring1 not initialized
  private WheelJoint m_spring1;
                     ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/Car.java:58: error: [NullAway] @NonNull field m_spring2 not initialized
  private WheelJoint m_spring2;
                     ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/Car.java:377: error: [NullAway] dereferenced expression m_car is @Nullable
    setCamera(m_car.getPosition());
                   ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/PrismaticTest.java:48: error: [NullAway] @NonNull field m_joint not initialized
  PrismaticJoint m_joint;
                 ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/TheoJansen.java:57: error: [NullAway] @NonNull field m_motorJoint not initialized
  RevoluteJoint m_motorJoint;
                ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/Pulleys.java:130: error: [NullAway] dereferenced expression m_joint1 is @Nullable
    float ratio = m_joint1.getRatio();
                          ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/CharacterCollision.java:280: error: [NullAway] dereferenced expression m_character is @Nullable
    Vec2 v = m_character.getLinearVelocity();
                        ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/CollisionProcessing.java:164: error: [NullAway] dereferenced expression point.fixtureA is @Nullable
      Body body1 = point.fixtureA.getBody();
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/CollisionProcessing.java:165: error: [NullAway] dereferenced expression point.fixtureB is @Nullable
      Body body2 = point.fixtureB.getBody();
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/SensorTest.java:157: error: [NullAway] dereferenced expression m_sensor is @Nullable
      Body ground = m_sensor.getBody();
                            ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/ApplyForce.java:50: error: [NullAway] @NonNull field m_body not initialized
  Body m_body;
       ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/LiquidTest.java:80: error: [NullAway] initializer method does not guarantee @NonNull fields liquid (line 61), bod (line 316) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public LiquidTest() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/EdgeShapes.java:162: error: [NullAway] assigning @Nullable expression to @NonNull field
      fd.shape = m_circle;
               ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/EdgeShapes.java:222: error: [NullAway] dereferenced expression callback.m_normal is @Nullable
      Vec2 head = callback.m_normal.mul(.5f).addLocal(callback.m_point);
                                   ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/CircleStress.java:51: error: [NullAway] @NonNull field joint not initialized
  private RevoluteJoint joint;
                        ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/BodyTypes.java:51: error: [NullAway] @NonNull field m_platform not initialized
  Body m_platform;
       ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/PolyShapes.java:145: error: [NullAway] assigning @Nullable expression to @NonNull field
      fd.shape = m_circle;
               ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/PolyShapes.java:244: error: [NullAway] initializer method does not guarantee @NonNull field debugDraw (line 240) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public PolyShapesCallback(IWorldPool argWorld) {
         ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/framework/TestbedTest.java:138: error: [NullAway] initializer method does not guarantee @NonNull fields m_world (line 106), groundBody (line 107), model (line 118) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public TestbedTest() {
         ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/framework/TestbedTest.java:797: error: [NullAway] dereferenced expression p is @Nullable
    queryAABB.lowerBound.set(p.x - .001f, p.y - .001f);
                              ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/framework/j2d/TestPanelJ2D.java:67: error: [NullAway] assigning @Nullable expression to @NonNull field
  private Graphics2D dbg = null;
                     ^
    (see http://t.uber.com/nullaway )
../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/framework/j2d/TestbedSidePanel.java:84: error: [NullAway] initializer method does not guarantee @NonNull field tests (line 74) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public TestbedSidePanel(TestbedModel argModel, TestbedController argController) {
         ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/urld8e41b4f7f_warrenfalk_jbox2dtest_tgz-pJ8-org_jbox2d_testbed_framework_TestbedMainJ8/src/org/jbox2d/testbed/tests/LiquidTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
27 errors
